# a2a-multicloud

./: .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  a2a-local.sh  a2a-master-rust.sh  a2a-master.sh  a2acard.sh  a2aevents.sh  a2aeventsnyc.sh  a2ahello.sh  a2amaster.sh  a2atest.sh  a2aweather.sh  adk-master-python.sh  adk-random-python.sh  agent_log.txt  benchmark_analysis.md  cli.sh  cloudbuild.yaml  cloudrun.sh  deploycloudrun.py  full_openapi.json  init.sh  inspect.sh  performance_analysis.md  poly-go.sh  poly-master.sh  poly-python.sh  pyproject.toml  requirements.txt  set_env.sh  web.sh
.agents/: mcp_config.json
.gemini/: settings.json
a2a-agentcard/: agentcard.py
a2a-client-test/: requirements.txt  test_client.py
benchmark-rust/: Cargo.toml  GEMINI.md  Makefile  README.md
benchmark-rust-aws/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  test-a2a.sh
benchmark-rust-aws/src/: main.rs
benchmark-rust-azure/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  test-a2a.sh
benchmark-rust-azure/src/: main.rs
benchmark-rust-gcp/: .gcloudignore  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  test-a2a.sh
benchmark-rust-gcp/src/: main.rs
benchmark-rust/src/: main.rs
deploy_temp/: Dockerfile
deploy_temp/agents/a2aeventsnyc/: agent.py
poly-python/agents/poly_master/: agent.py
poly-python/agents/poly_rand/: agent.py
rust-master/: Cargo.toml  GEMINI.md  Makefile  README.md
rust-master/src/: main.rs
src/agents/: .dockerignore  .env  Dockerfile  cloudbuild.yaml
src/agents/a2a_events/: agent.py
src/agents/a2a_events_nyc/: .dockerignore  Dockerfile  Makefile  agent.py  cloudbuild.yaml  requirements.txt
src/agents/a2a_hello_world/: agent.py
src/agents/a2a_local_agent/: agent.py
(+8 files in other folders)
