[package]
name = "mcp-aca-rust-azure"
version = "0.1.0"
edition = "2024"
description = "Azure Container Apps Rust sub-agent for prime calculations in the A2A Multi-Cloud Benchmark system"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
