[package]
name = "benchmark-rust-master"
version = "0.1.0"
edition = "2024"
description = "Master coordinator agent for the A2A Multi-Cloud Benchmark system"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = "0.4"
